--- a/css/style.css
+++ b/css/style.css
@@ -23,41 +23,42 @@ html {
 	float:left;
 	width: 23%;
     height: 95%;
+    display: inline;
 }
+
+.dropper,
+.buttoncon
+{
+    width:95%;
+    margin-left:2.5%;
+    margin-right:2.5%;
+    position:relative;
+}
+
 
 .dropper
 {
     margin-bottom:20px;
-    float:right;
-}
-
-#drop1,
-#drop2,
-#drop3,
-#drop4
-{
-    float:right;
-    width: 95%;
+    border:0px solid;
+    border-bottom-left-radius: 15px 15px;
+    border-bottom-right-radius: 15px 15px;
+    height:0%;
 }
 
 
 .buttoncon
 {
     height: 7.5%; 
-    width: 95%;
-    margin:auto;
-    float:right;
-   
 }
 
     .buttonimg
     {
         height: 100%;
-        width: 20%;
+        width: 19%;
         background-color:red;
+        border:1px solid;
         border-top-left-radius: 15px 15px;
         border-bottom-left-radius: 15px 15px;
-        border:1px solid;
     }
     
 
@@ -68,10 +69,11 @@ html {
         width: 80%;
         float:right;
         background-color: Silver;
+        border:1px solid;
         border-top-right-radius: 15px 15px;
         border-bottom-right-radius: 15px 15px;
-        border:1px solid;
     }
+    
         .buttontext
         {
             margin:auto;
