--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,11 @@ html {
 .buttoncon
 {
     height: 7.5%; 
+    box-shadow: 10px 12px 5px #888888;
+    border-bottom-left-radius: 15px 15px;
+    border-bottom-right-radius: 15px 15px;
+    border-top-right-radius: 15px 15px;
+    border-bottom-right-radius: 15px 15px;
 }
 
     .buttonimg
