--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@ body
     margin-top:2px;
     float:right;
     background-color:lightgrey;
-    margin-right:20px;
+    margin-right:10px;
     border-bottom-left-radius: 5px 5px;
     border-bottom-right-radius: 5px 5px;
     border-top-right-radius: 5px 5px;
@@ -195,6 +195,31 @@ body
     margin-bottom:7.5px;
     font-family:arial;color:black;font-size:15px;
     float: right;
-    margin-right; 20px;
+    margin-right; 10px;
+}
+
+#regtext
+{
+    margin-top:5px;
+	margin-bottom:5px;
+	font-family:arial;color:black;font-size:15px;
+	text-align:center;
+	text-align:middle;
+}
+
+#regbtn
+{
+    border:1px solid;
+    width:60px;
+    height: 25px;
+    margin-top:2px;
+    float:right;
+    background-color:lightgrey;
+    margin-right:10px;
+    border-bottom-left-radius: 5px 5px;
+    border-bottom-right-radius: 5px 5px;
+    border-top-right-radius: 5px 5px;
+    border-top-left-radius: 5px 5px;
+    
 }
 
