--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,6 @@ body
   background-color: #F3F3F3;
 }
 
-.container 
-{
-    
-}
-
 .menu 
 {
     height: 35px;
@@ -24,8 +19,18 @@ body
 
 .content
 {
+    padding-top: 60px;
     position: relative;
     width: 100%;
+}
+
+.registerdiv
+{
+    z-index: 3;
+    padding-top: 60px;
+    position: relative;
+    width: 100%;
+    visibility: hidden;
 }
 
 .input
@@ -59,6 +64,8 @@ body
     margin-top: 5px;
     margin-bottom: 5px;
     margin-right: 15px;
+    text-decoration: none;
+    cursor: pointer;
     -moz-border-radius-topright: 30px;
     -webkit-border-top-right-radius: 30px;
     border-top-right-radius: 30px;
@@ -79,7 +86,6 @@ body
 
 #logo
 {
-    margin-top: 60px;
     display: block;
     margin-left: auto;
     margin-right: auto
