--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,20 @@
 html,
 body 
 {
-  height: 100%;
-  width: 100%;
-  padding:0px;
-  margin:0px;
-  font-family:arial;color:black;font-size:15px;
-  background-color: #F3F3F3;
+    height: 100%;
+    width: 100%;
+    padding:0px;
+    margin:0px;
+    font-family:arial;color:black;font-size:15px;
+    background-color: #F3F3F3;
+    overflow-x: hidden;
+}
+
+.container
+{
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 .menu 
@@ -14,22 +22,23 @@ body
     height: 35px;
     width: 100%;
     background-color: rgb(149, 165, 165);
-    position: relative;
+    position: absolute;
 }
 
 .content
 {
-    padding-top: 60px;
+    margin-top: 60px;
     position: relative;
     width: 100%;
 }
 
 .registerdiv
 {
-    z-index: 3;
-    padding-top: 60px;
     position: relative;
-    width: 100%;
+    width: 500px;
+    margin-left: 60px;
+    z-index: 3;
+    margin-top: 60px;
     visibility: hidden;
 }
 
