--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,36 @@ body
 
 .registerdiv
 {
+    padding: 30px;
+    background-color: silver;
     position: relative;
     width: 500px;
-    margin-left: 60px;
     z-index: 3;
-    margin-top: 60px;
+    margin: 0 auto;
+    margin-top: 50px;
     visibility: hidden;
+    border:2px solid;
+    border-radius:25px;
+}
+
+.regi
+{
+    border-color: transparent;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-right: 15px;
+    height: 25px;
+    width: 150px;
+    outline: 0;
+    background-color: white;
+    -moz-border-radius-topright: 30px;
+    -webkit-border-top-right-radius: 30px;
+    border-top-right-radius: 30px;
+    -moz-border-radius-bottomleft: 30px;
+    -webkit-border-bottom-left-radius: 30px;
+    border-bottom-left-radius: 30px;
 }
 
 .input
