--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,16 @@ body
     border-radius:25px;
 }
 
+#registercover
+{
+    position: absolute;
+    opacity: 0.75;
+    background-color: black;
+    height: 100%;
+    width: 100%;
+    z-index: 2;
+}
+
 .regi
 {
     border-color: transparent;
@@ -87,6 +97,22 @@ body
     border-bottom-left-radius: 30px;
 }
 
+#rmb
+{
+    float: right;
+    height: 25px;
+    width: 75px;
+    margin-right: 15px;
+    text-decoration: none;
+    cursor: pointer;
+    -moz-border-radius-topright: 30px;
+    -webkit-border-top-right-radius: 30px;
+    border-top-right-radius: 30px;
+    -moz-border-radius-bottomleft: 30px;
+    -webkit-border-bottom-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+    background-color: rgb(114, 169, 217);
+}
 
 #login, 
 #register
