--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,8 @@ body
 
 #rmb
 {
-    float: right;
+    float: left;
+    margin-bottom: 20px;
     height: 25px;
     width: 75px;
     margin-right: 15px;
