--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,8 +3,8 @@ body
 {
     height: 100%;
     width: 100%;
-    padding:0px;
-    margin:0px;
+    padding: 0;
+    margin: 0;
     font-family:arial;color:black;font-size:15px;
     background-color: #F3F3F3;
     overflow-x: hidden;
