--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: "Karnivor";
+    src: url('../fonts/KARNIVOR.ttf') format('truetype');
+}
+
 html,
 body 
 {
@@ -192,7 +197,7 @@ body
 
 .footertext {
     float: left;
-    font-family:arial;color:black;font-size:20px;
+    font-family:Karnivor;color:black;font-size:20px;
     margin-left: 5px;
     margin-top: 2px;
     margin-right: 0;
