--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
 @font-face {
     font-family: "Karnivor";
     src: url('../fonts/KARNIVOR.ttf') format('truetype');
+}@font-face {
+    font-family: "Orbitron";
+    src: url('../fonts/Orbitron-Regular.ttf') format('truetype');
 }
 
 html,
@@ -201,4 +204,12 @@ body
     margin-left: 5px;
     margin-top: 2px;
     margin-right: 0;
+}
+
+.footerlink {
+    float: right;
+    font-family:Orbitron;color:black;font-size:14px;
+    margin-left: 5px;
+    margin-top: 8px;
+    margin-right: 5px;
 }
