--- a/public/css/style.css
+++ b/public/css/style.css
@@ -213,3 +213,10 @@ body
     margin-top: 8px;
     margin-right: 5px;
 }
+
+.copyright {
+    z-index: 10;
+    visibility: hidden;
+    padding: 10px;
+    margin-top: 100px;
+}
