--- a/public/css/style.css
+++ b/public/css/style.css
@@ -237,3 +237,16 @@ body
     border:2px solid;
     border-radius:25px;
 }
+
+.gb {
+    margin-left: 30px;
+    height: 50px;
+    line-height: 50px;
+    width: 200px;
+    background-color: #9a9a9a;
+    text-align:center;
+}
+
+.gbt {
+    font-family:Orbitron;color:black;font-size:24px;
+}
