Strip down of existing codebase.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,7 +15,7 @@ body
     padding: 0;
     margin: 0;
     font-family:arial;color:black;font-size:15px;
-    background-color: #F3F3F3;
+    background-color: #4796df;
     overflow-x: hidden;
     overflow-y: hidden;
 }
@@ -44,32 +44,7 @@ body
     height: 35px;
     margin: 0;
     width: 100%;
-    background-color: rgb(149, 165, 165);
-}
-
-.input
-{
-    float: right;
-    padding-left: 15px;
-    margin-right: 15px;
-    border-color: transparent;
-    outline-color: rgb(149, 165, 165);
-    background-color: white;
-    height: 20px;
-
-    -moz-border-radius-topright: 30px;
-    -webkit-border-top-right-radius: 30px;
-    border-top-right-radius: 30px;
-    -moz-border-radius-bottomleft: 30px;
-    -webkit-border-bottom-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-
-    -moz-border-radius-topleft: 30px;
-    -webkit-border-top-left-radius: 30px;
-    border-top-left-radius: 30px;
-    -moz-border-radius-bottomright: 30px;
-    -webkit-border-bottom-right-radius: 30px;
-    border-bottom-right-radius: 30px;
+    background-color: #3a5063;
 }
 
 #content
@@ -79,99 +54,21 @@ body
     width: 100%;
 }
 
-.registerdiv
-{
-    padding: 30px;
-    padding-top: 10px;
-    background-color: silver;
-    position: relative;
-    width: 500px;
-    z-index: 3;
-    margin: 0 auto;
-    margin-top: 50px;
-    visibility: hidden;
-    border:2px solid;
-    border-radius:25px;
-}
-
-#registercover
-{
-    position: absolute;
-    opacity: 0.75;
-    background-color: black;
-    height: 100%;
-    width: 100%;
-    z-index: 2;
-}
-
-.regi
-{
-    border-color: transparent;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-right: 15px;
-    height: 25px;
-    width: 150px;
-    background-color: white;
-    -moz-border-radius-topright: 30px;
-    -webkit-border-top-right-radius: 30px;
-    border-top-right-radius: 30px;
-    -moz-border-radius-bottomleft: 30px;
-    -webkit-border-bottom-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    outline-color: silver;
-}
-
-
-
-.rmb
-{
-    float: left;
-    margin-bottom: 20px;
-    height: 25px;
-    width: 75px;
-    margin-right: 15px;
-    text-decoration: none;
-    cursor: pointer;
-    -moz-border-radius-topright: 30px;
-    -webkit-border-top-right-radius: 30px;
-    border-top-right-radius: 30px;
-    -moz-border-radius-bottomleft: 30px;
-    -webkit-border-bottom-left-radius: 30px;
-    border-bottom-left-radius: 30px;
-    background-color: rgb(114, 169, 217);
-}
-
 #login,
 #register
 {
-    height: 25px;
     width: 75px;
     float: right;
     text-decoration: none;
     cursor: pointer;
     margin-right: 15px;
-    -moz-border-radius-topright: 30px;
-    -webkit-border-top-right-radius: 30px;
-    border-top-right-radius: 30px;
-    -moz-border-radius-bottomleft: 30px;
-    -webkit-border-bottom-left-radius: 30px;
-    border-bottom-left-radius: 30px;
 
-    -moz-border-radius-topleft: 30px;
-    -webkit-border-top-left-radius: 30px;
-    border-top-left-radius: 30px;
-    -moz-border-radius-bottomright: 30px;
-    -webkit-border-bottom-right-radius: 30px;
-    border-bottom-right-radius: 30px;
-    background-color: rgb(114, 169, 217);
+    background-color: #3a5063;
 }
 
 .buttontext
 {
-    font-family:"Helvetica Neue", sans-serif;color:black;font-size:15px;
+    font-family:"Lato", sans-serif;color:white;font-size:15px;
     margin-top: 5px;
     margin-bottom: 5px;
     text-align:center;
@@ -182,94 +79,4 @@ body
     display: block;
     margin-left: auto;
     margin-right: auto
-}
-#ilogin {
-    padding: 3px;
-    padding-top: 3px;
-    padding-right: 5px;
-    background-color: silver;
-    position: absolute;
-    width: 110px;
-    z-index: 7;
-    margin: 0 auto;
-    margin-top: 5px;
-    visibility: hidden;
-    border:1px solid;
-    border-color: #83939b;
-    border-radius: 10px;
-    right:50px;
-    top:40px;
-}
-
-#iloginp {
-    color: red;
-}
-
-.footer {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    height: 30px;
-    width: 100%;
-    background-color: rgb(149, 165, 165);
-}
-
-#footerlogo {
-    overflow: hidden;
-    float: left;
-    width: 30px;
-    margin-left: 5px;
-    margin-top: 2px;
-    margin-right: 0;
-}
-
-.footertext {
-    float: left;
-    font-family:Karnivor;color:black;font-size:20px;
-    margin-left: 5px;
-    margin-top: 2px;
-    margin-right: 0;
-}
-
-.footerlink {
-    cursor: pointer;
-    float: right;
-    font-family:Orbitron;color:black;font-size:14px;
-    margin-left: 5px;
-    margin-top: 8px;
-    margin-right: 5px;
-}
-
-.terms,
-.privacy,
-.creative,
-.contact,
-.faq,
-.copyright {
-    overflow: hidden;
-    font-family:"Helvetica Neue", sans-serif;color:black;font-size:15px;
-    padding: 5px;
-    text-align:center;
-    position: relative;
-    z-index: 20;
-    margin: 0 auto;
-    background-color: silver;
-    width: 500px;
-    margin-top: -260px;
-    visibility: hidden;
-    border:2px solid;
-    border-radius:25px;
-}
-
-.gb {
-    margin-left: 30px;
-    height: 50px;
-    line-height: 50px;
-    width: 200px;
-    background-color: #9a9a9a;
-    text-align:center;
-}
-
-.gbt {
-    font-family:Orbitron;color:black;font-size:24px;
 }
